--- a/src/weather.html
+++ b/src/weather.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="weather-interface.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
     <title>Weather</title>
   </head>
   <body>
